--- a/config.json
+++ b/config.json
@@ -7,7 +7,8 @@
     },
     "footerPanel": {
       "options": {
-        "feedbackEnabled": true
+        "feedbackEnabled": true,
+        "printEnabled": true
       }
     }
   }
