--- a/two-up-config.json
+++ b/two-up-config.json
@@ -3,12 +3,17 @@
     "headerPanelEnabled": true,
     "leftPanelEnabled": true,
     "rightPanelEnabled": true,
-    "searchWithinEnabled": true
+    "searchWithinEnabled": false
   },
   "modules": {
     "contentLeftPanel": {
       "options": {
         "panelOpen": false
+      }
+    },
+    "headerPanel": {
+      "options": {
+        "settingsButtonEnabled": false
       }
     },
     "footerPanel": {
@@ -22,6 +27,14 @@
         "openEnabled": false,
         "printEnabled": false,
         "shareEnabled": false
+      }
+    },
+    "pagingHeaderPanel":
+    {
+      "options":
+      {
+        "galleryButtonEnabled": false,
+        "pagingToggleEnabled": false
       }
     }
   }
